--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
  
    <footer>
        <p>&copy; copyright 2020 | All Right reserved</p>
-        <p>Designed by Sagar with LOVE & PASSION</p>
+        <p>» Designed by Sagar with LOVE & PASSION</p>
    </footer>
    </body>
 </html>
